workshop03/codeserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: csns
  labels:
    app: cs
    name: cs-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cs
      name: cs-po

  template:
    metadata:
      name: cs-po
      labels:
        app: cs
        name: cs-po
    spec:
      volumes:
        - name: cs-vol
          persistentVolumeClaim:
            claimName: cs-pvc
      containers:
        - name: cs-container
          image: linuxserver/code-server:4.89.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: cs-port
              containerPort: 8443
          volumeMounts:
            - name: cs-vol
              mountPath: /config/workspace
          resources: 
            requests:
              cpu: 20m
              memory: 50Mi
            limits:
              cpu: 20m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cs-svc
  namespace: csns
  labels:
    app: cs
    name: cs-svc
spec:
  type: ClusterIP
  selector:
    app: cs
    name: cs-po
  ports:
    - name: cs-svc-port
      port: 3000
      targetPort: cs-port
