workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ing
  namespace: csns
  labels:
    app: cs
    name: cs-ing
spec:
  ingressClassName: nginx
  rules:
    - host: code-104.248.98.107.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cs-svc
                port:
                  name: cs-svc-port
